--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -7,6 +7,12 @@ span {
 }
 
 .delete-icon:hover {
-  transform: scale(1.1);
+  transform: scale(1.8);
   cursor: pointer;
+}
+.ChangeButton{
+  margin-left: 10px;
+}
+.ChangeButton:hover{
+  font-size:large
 }
